Fixed bug where player could deselect monkey after jumping
Also initial implementation of monkey jump history, not complete
TODO: Complete monkey jump history (bugs with jumping not
showing/capturing), capturing history, bear, tool/navbar

--- a/src/index.css
+++ b/src/index.css
@@ -188,7 +188,7 @@ body {
     margin: 80px;
     margin-top: 70px;
     margin-left: 8px;
-    border: 5px solid black;
+    border: 4px solid black;
     overflow-y: auto;
     border-radius: 30px 30px 10px 10px;
 }
